fix canvas overflow and panel size

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -29,7 +29,8 @@ p {
 .wholeRoom {
   background-color: lightgray;
   float: left;
-  width: 100%; }
+  width: 100%;
+  overflow-x: hidden; }
 
 #canvas {
   margin: 0px 0px;
@@ -51,7 +52,7 @@ p {
   top: 0;
   right: 0;
   width: 320px;
-  height: 800px;
+  height: 880px;
   background-color: black;
   padding: 10px 10px; }
 
