--- a/client/scss/_room.scss
+++ b/client/scss/_room.scss
@@ -2,6 +2,7 @@
   background-color: lightgray;
   float: left;
   width: 100%;
+  overflow-x: hidden;
 }
 
 #canvas {
@@ -28,7 +29,7 @@
   top: 0;
   right: 0;
   width: 320px;
-  height: 800px;
+  height: 880px;
   background-color: black;
   padding: 10px 10px;
 }
